--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url(/Users/eisuketanimoto/Desktop/Portfolio/デザインカンプコーディング/架空のWeb制作会社のサイト/contact/styles/vendors/swiper-bundle.css);
 @-webkit-keyframes arrowAnimation {
   0% {
     height: 0;
@@ -77,7 +76,7 @@ a {
   text-decoration: none !important;
 }
 
-.fs-sm, .header__nav > li > a, .contact-form__inner > span, label > select, label .form__kinds-radio > div > span, .contact__content > p, .footer__nav > li > a {
+.fs-sm, .header__nav > li > a, .contact-form__inner > span, label > select, label .form__kinds-radio > div > span, .footer__nav > li > a {
   font-size: .8em;
 }
 
@@ -102,7 +101,7 @@ a {
   margin-bottom: 100px;
 }
 
-.content-width, .contact__container {
+.content-width {
   max-width: 1200px;
   margin: 0 auto;
   width: 90%;
@@ -503,17 +502,6 @@ label > select {
 
 label .form__kinds-radio > div > input {
   display: inline-block;
-}
-
-.contact {
-  width: 100%;
-  background-color: #dcdcdcc3;
-}
-
-.contact__container {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
 }
 
 .footer {
